--- a/src/Components/Pages/GSAP/style.css
+++ b/src/Components/Pages/GSAP/style.css
@@ -10,3 +10,15 @@ body {
     height: 100%;
     width: 100%;
 }
+
+#box {
+    height: 200px;
+    width: 200px;
+    background-color: crimson
+}
+
+#box2 {
+    height: 200px;
+    width: 200px;
+    background-color: blueviolet;
+}
