--- a/src/Components/Pages/GSAP/style.css
+++ b/src/Components/Pages/GSAP/style.css
@@ -11,14 +11,8 @@ body {
     width: 100%;
 }
 
-#box {
-    height: 200px;
+.box {
     width: 200px;
-    background-color: crimson
-}
-
-#box2 {
     height: 200px;
-    width: 200px;
     background-color: blueviolet;
 }
